--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -57,7 +57,7 @@
  
  a.button {
    background-color: white; 
-   color: black; 
+   color: white; 
    border: 2px solid #0F5D9F;
    padding: 5px 15px;
    text-decoration: none;
@@ -69,3 +69,21 @@
    color: white;
  }
  
+
+ .-sort-name {
+   background-color: #dc2f2f !important;
+   color: white;
+ }
+
+ .-sort-amount {
+   background-color: #402a23 !important;
+   color: white;
+ }
+
+ .-sort-name:hover {
+   background-color: #922121 !important;
+ }
+
+ .-sort-amount:hover {
+   background-color: #2c2d34 !important;
+ }
