--- a/app/views/basket_case/index.html.erb
+++ b/app/views/basket_case/index.html.erb
@@ -2,16 +2,16 @@
   <h1>Fruit Basket</h1>
   <small class="data">Raw Data: <%= @fruits %></small>
   <br>
-  <%= link_to "Order by Name - #{@order}", basket_case_order_by_fruit_path(order: @order), class: "button -sort-name"%>
-  <%= link_to "Order by Amount - #{@order}", basket_case_order_by_amount_path(order: @order), class: "button -sort-amount"%>
+  <%= link_to "Order by Name - #{@order}", basket_case_index_path(order: @order, sort: BasketCaseController::NAME), class: "button -sort-name"%>
+  <%= link_to "Order by Amount - #{@order}", basket_case_index_path(order: @order, sort: BasketCaseController::AMOUNT), class: "button -sort-amount"%>
   <br>
   <br>
 
   <table>
     <thead>
       <tr>
-        <th>Fruit</th>
-        <th>Amount</th>
+        <th><%=BasketCaseController::NAME.titleize%></th>
+        <th><%=BasketCaseController::AMOUNT.titleize%></th>
       </tr>
     </thead>
     <tbody>
