--- a/app/views/basket_case/index.html.erb
+++ b/app/views/basket_case/index.html.erb
@@ -2,8 +2,8 @@
   <h1>Fruit Basket</h1>
   <small class="data">Raw Data: <%= @fruits %></small>
   <br>
-  <%= link_to "Order by Name - #{@order}", basket_case_index_path(order: @order, sort: BasketCaseController::NAME), class: "button -sort-name"%>
-  <%= link_to "Order by Amount - #{@order}", basket_case_index_path(order: @order, sort: BasketCaseController::AMOUNT), class: "button -sort-amount"%>
+  <%= link_to "Order by Name #{order_arrow(@order, @sort, BasketCaseController::NAME)}", basket_case_index_path(order: toggle_order(@order), sort: BasketCaseController::NAME), class: "button -sort-name"%>
+  <%= link_to "Order by Amount #{order_arrow(@order, @sort, BasketCaseController::AMOUNT)}", basket_case_index_path(order: toggle_order(@order), sort: BasketCaseController::AMOUNT), class: "button -sort-amount"%>
   <br>
   <br>
 
